tests/ui/proc-macro/quote/does-not-have-iter-interpolated-dup.stderr
error[E0308]: mismatched types
  --> $DIR/does-not-have-iter-interpolated-dup.rs:12:5
   |
LL |     quote!($($nonrep $nonrep)*);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `HasIterator`, found `ThereIsNoIteratorInRepetition`
   |     here the type of `has_iter` is inferred to be `ThereIsNoIteratorInRepetition`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
